--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@restart/hooks": "^0.3.25",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.11.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.5.3",
     "e": "^0.1.3",
@@ -31,6 +33,8 @@
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.14.0",
-    "react-navbar-dropdown": "^1.4.2"
+    "react-navbar-dropdown": "^1.4.2",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   }
 }
